sample/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: myphp-app
  labels:
    name: myphp-app
