sample/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: myphp-service
  namespace: myphp-app
spec:
  ports:
    - port: 80
  selector:
    app: myphp-deployment
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myphp-deployment
  namespace: myphp-app
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: myphp-deployment
  template:
    metadata:
      labels:
        app: myphp-deployment
    spec:
      # imagePullSecrets:
      #   - name: gitlab-token
      containers:
        - name: myphp-deployment
          image: docker.io/randyproxz/php:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 0
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 0
      terminationGracePeriodSeconds: 0
