sample/service.yaml
apiVersion: v1
kind: Service
metadata:
   name: myphp-service
   namespace: myphp-app

spec:
   selector:
      app: myphp-deployment
   ports:
      - name: http
        port: 80
        protocol: TCP
        targetPort: 80
   sessionAffinity: ClientIP
   sessionAffinityConfig:
      clientIP:
         timeoutSeconds: 3600
   type: ClusterIP
