sample/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: traefik-network-redirect@kubernetescrd,traefik-network-security@kubernetescrd
  name: myphp-ingress
  namespace: myphp-app

spec:
  rules:
    - host: "php.domain.com"
      http:
        paths:
          - backend:
              service:
                name: myphp-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "php.domain.com"
      secretName: php.domain.com-tls
